--- a/index.org
+++ b/index.org
@@ -77,6 +77,7 @@ More information on this page: http://repo.or.cz/w/org-mode.git
      unsubscribed.
    - Read the list on [[http://www.gmane.org][Gmane]] through a [[http://news.gmane.org/gmane.emacs.orgmode][web interface]] or with a
      [[news://news.gmane.org/gmane.emacs.orgmode][newsreader]].
+
 #+BEGIN_HTML
 <li><form method="get" action="http://search.gmane.org/">
 <input type="text" name="query">
@@ -87,11 +88,11 @@ More information on this page: http://repo.or.cz/w/org-mode.git
 
 ** Worg - user-driven knowledge-base about org-mode
 
-[[http://129.199.80.1/~guerry/worg/][Worg]], created by [[http://www.cognition.ens.fr/~guerry/][Bastien Guerry]], is a setup to allow users to jointly
-edit a number of Org-mode files containing documentation about
-Org-mode.  This is something like a wiki.  If you'd like to contribute
-your own setup, screenshots, tutorials etc, please go to [[http://129.199.80.1/~guerry/worg/][the Worg
-page]], and start from there.
+[[http://www.legito.net/worg/][Worg]], created by [[http://www.cognition.ens.fr/~guerry/][Bastien Guerry]], is a setup to allow users to jointly
+edit a number of Org-mode files containing documentation about Org-mode.
+This is something like a wiki.  If you'd like to contribute your own
+setup, screenshots, tutorials etc, please go to [[http://www.legito.net/worg/][the Worg page]], and start
+from there.
 
 ** Tutorials
 
