--- a/index.org
+++ b/index.org
@@ -22,9 +22,9 @@ messages, BBDB entries, and any files related to the projects.  For
 printing and sharing of notes, an Org-mode file can be exported as a
 structured ASCII file, HTML, and LaTeX.
 
-* Current Version (6.00pre-5) and Compatibility
+* Current Version (6.00pre-6) and Compatibility
 
-The current version is 6.00pre-5.  To see what has changed in recent
+The current version is 6.00pre-6.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -40,7 +40,7 @@ but may lag a bit behind the website release.
 
 **** Distribution
 
-Download as [[file:org-5.23a.zip][zip file]] or [[file:org-5.23a.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.00pre-6.zip][zip file]] or [[file:org-6.00pre-6.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
@@ -174,7 +174,7 @@ from there.
 
     - [[http://www.cognition.ens.fr/~guerry/u/org2rem.el][From Org-mode to remind]] by [[http://www.cognition.ens.fr/~guerry/][Bastien Guerry]].
       
-    - [[file:org-export-freemind-0.1.0.tar.gz][From Org-mode to Freemind]] by Marco Vezzoli.
+    - [[file:org-6.00pre-5.][From Org-mode to Freemind]] by Marco Vezzoli.
 
 *** XXX to Org-mode
 
